GNOME Bugzilla – Bug 633352
prepare for the demise of size_request
Last modified: 2010-11-03 23:08:14 UTC
Created attachment 173400 [details] [review] patch the size_request vfunc is going to be dropped in GTK3. Here is a patch that prepares mutter for this. Only compile-tested.
Review of attachment 173400 [details] [review]: MetaAccelLabel patch looks fine, works fine. MetaPreview patch goes boom:
+ Trace 224374
Just run mutter-theme-viewer from the source tree to reproduce. Not really sure how the crashing code is supposed to work - if this is a widget bug, points to missing sanity checks in the sizing code.
Review of attachment 173400 [details] [review]: Crash seems to have been from changes in GTK+ (to GtkButtonBox apparently) that have since been fixed up. Patch looks good and works for me now - checked that the appearance of mutter-theme-viewer is consistent with GTK+ 2.0 based metacity-theme-viewer
Wrote commit message and pushed